--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="id">ID:</string>
+    <string name="sort_name">Sort Name:</string>
+    <string name="name">Name:</string>
+    <string name="phone_code">Phone Code:</string>
 </resources>
